tests/robot/suites/policy/test_data/allow_tcp_4444_server_from_client.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-tcp-4444-server
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ubuntu-server
  ingress:
    - ports:
      - protocol: TCP
        port: 4444
      from:
      - podSelector:
          matchLabels:
            app: ubuntu-client
