tests/robot/suites/policy/test_data/allow_udp_7000_server_from_nginx.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-udp-7000-server
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ubuntu-server
  ingress:
    - ports:
      - protocol: UDP
        port: 7000
      from:
      - podSelector:
          matchLabels:
            app: nginx
