tests/robot/suites/policy/test_data/allow_port_5000_server_from_nginx_tcp_4444_udp_5000_expected.txt
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-port-5000-server
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ubuntu-server
  ingress:
    - ports:
      - port: 5000
      from:
      - podSelector:
          matchLabels:
            app: nginx
