tests/robot/suites/policy/test_data/allow_udp_7000_server_from_client_tcp_4444_udp_7000_expected.txt
PING client -> server OK
PING server -> client OK
UDP client -> server OK
UDP server -> client OK
TCP client -> server ERROR
TCP server -> client OK
PING host -> server OK
PING host -> client OK
UDP host -> server ERROR
UDP host -> client OK
TCP host -> server ERROR
TCP host -> client OK
